--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Music Listening Statistics</title>
     <script type="module" src="script.mjs"></script>
   </head>
   <body>
+    <h1>Music Listening Statistics</h1>
+
+    <!-- User Selector -->
+  <label for ="user-select">Select User:</label>
+  <select id="user-seelct" aria-label="Select a user to view their statistics">
+    <option value="">--choose a user</option>
+  </select>
+
+   <!-- Render Display Cards -->
+  <main id="cards-container" aria-live="polite">
+    
+  </main>
   </body>
 </html>
