--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </select>
 
    <!-- Render Display Cards -->
-  <main id="cards-container" aria-live="polite">
-    
+  <main id="stats-container" aria-live="polite">
+
   </main>
   </body>
 </html>
