user selector, page render, and fix typo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- User Selector -->
   <label for ="user-select">Select User:</label>
-  <select id="user-seelct" aria-label="Select a user to view their statistics">
+  <select id="user-select" aria-label="Select a user to view their statistics">
     <option value="">--choose a user</option>
   </select>
 
