landing page message

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
    <!-- Render Display Cards -->
   <main id="stats-container" aria-live="polite">
-
+     <p>👆 Select a user above to view their listening statistics.</p>
   </main>
   </body>
 </html>
