footer, selector space

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
   <main id="stats-container" aria-live="polite">
      <p>👆 Select a user above to view their listening statistics.</p>
   </main>
+  <footer>
+    <p>©2026 yanzhou-git. All rights reserved.</p>
+  </footer>
   </body>
 </html>
